--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -1,28 +1,31 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Show Listing</title>
-</head>
-<body>
-    
+<% layout("/layouts/boilerplate") %>
+
+<div class="row mt-3">
+    <div class="col-8 offset-3">
         <h3>Listing Details</h3>
-        <ul>
-            <li><strong>Title:</strong> <%= listing.title %></li>
-            <li><strong>Description:</strong> <%= listing.discription %></li>
-            <li><strong>Price:</strong> &#8377; <%= listing.price.toLocaleString("en-IN") %></li>
-            <li><strong>Location:</strong> <%= listing.location %></li>
-            <li><strong>Country:</strong> <%= listing.country %></li>
-        </ul>
-        <br><br>
+    </div>
+    <div class="card col-6 offset-3 show-card">
+        <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing_image">
+        <div class="card-body">
+            <p class="card-text">
+                <b><%= listing.title %></b><br>
+                <%= listing.description %> <br>
 
-        <a href="/listings/<%= listing._id %>/edit">Edit this listing</a>
+                &#8377;<%= listing.price ? listing.price.toLocaleString('en-IN', { maximumFractionDigits: 2 }) : 'N/A' %> <br>
 
-        <br><br>
+                <%= listing.location %> <br>
+                <%= listing.country %>
+            </p>
+        </div>
+    </div>
+
+    <br>
+
+    <div class="btns">
+        <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
+
         <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
-            <button type="submit">Delete this listing</button>
+            <button class="btn btn-dark offset-5">Delete</button>
         </form>
-   
-</body>
-</html>
+    </div>
+</div>
