--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -8,8 +8,8 @@
         <div class="f-info-brand">&copy; Wanderlust Private Limited</div>
 
         <div class="f-info-links">
-            <a href="/privacy">Privacy</a>
-            <a href="/terms">Terms</a>
+            <a href="/privacy" class="mr-1">Privacy</a>
+            <a href="/terms" class="ml-1">Terms</a>
         </div>
     </div>
 </footer>
