--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -19,7 +19,9 @@
     
     <%- include("../includes/navbar.ejs") %>           <!-- header -->
     
-    <div class="container"> <%- body %></div>
+    <div class="container"> 
+        <%- include("../includes/flash.ejs") %>  <%- body %> 
+    </div>
 
     
     <%- include("../includes/footer.ejs") %>            <!-- footer -->
