--- a/views/listings/edit.ejs
+++ b/views/listings/edit.ejs
@@ -11,14 +11,14 @@
         <div class="mb-3">
             <label for="title" class="form-label">Title</label>
             <input type="text" name="listing[title]" class="form-control" value="<%= listing.title %>" required>
-            <div class="invalid-feedback">Give a valid title</div> <!-- Extra check validation  -->
+            <div class="invalid-feedback">Give a valid title</div> 
             <div class="valid-feedback">Title looks good</div> 
         </div>
         
        
         <div class="mb-3">
-            <label for="discription" class="form-label">Description</label>
-            <textarea name="listing[discription]" class="form-control" required><%= listing.discription %> </textarea>
+            <label for="description" class="form-label">Description</label>
+            <textarea name="listing[description]" class="form-control" required><%= listing.description %></textarea>
             <div class="invalid-feedback">Please enter a short description</div>
         </div>
         
@@ -53,4 +53,3 @@
     </form>
     </div>
 </div>
-
