--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -7,31 +7,27 @@
     <div class="card col-6 offset-3 show-card listing-card">
         <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing_image">
         <div class="card-body">
-            <p class="card-text">
+            <p class="card-text" >Ownedby <i><%= listing.owner.username %></i></p>
+            
+            <p class="card-text" > <b><%= listing.description %> </b><br> </p>    
+            <p class="card-text" > &#8377;<%= listing.price ? listing.price.toLocaleString('en-IN', { maximumFractionDigits: 2 }) : 'N/A' %> </p>
+            <p class="card-text" > <%= listing.location %> </p>
+            <p class="card-text" > <%= listing.country %> </p>                 
 
-                <br>
-                <b><%= listing.description %> </b><br>
-
-                &#8377;<%= listing.price ? listing.price.toLocaleString('en-IN', { maximumFractionDigits: 2 }) : 'N/A' %> <br>
-
-                <%= listing.location %> <br>
-                <%= listing.country %>
-            </p>
         </div>
     </div>
-
     <br>
+        <div class="btns">
+            <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
 
-    <div class="btns">
-        <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
-
-        <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
-            <button class="btn btn-dark offset-5">Delete</button>
-        </form>
-    </div>
+            <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
+                <button class="btn btn-dark offset-5">Delete</button>
+            </form>
+        </div>
+    
     <div class="col-8 offset-3 mb-3">
         <hr>
-
+        <% if (currUser){ %>
         <h4>Leave a Review</h4>
         <form action="/listings/<%= listing._id %>/reviews" method="POST" novalidate class="needs-validation">
 
@@ -46,8 +42,11 @@
             </div>
             <button class="btn btn-outline-dark">Submit</button>
         </form>
-
         <hr>
+
+
+    <% } %>
+
 
         <p> <b>All Reviews</b></p>
 
@@ -55,14 +54,15 @@
             <% for (let review of listing.reviews) { %>
                 <div class="card col-5 ms-3 mb-3">
                     <div class="card-body">
-                        <h5 class="card-title"> Jane Doe</h5>
+                        <h5 class="card-title">@<%= review.author.username %></h5>
                         <p class="card-text"> <%= review.comment %></p>
                         <p class="card-text"> <%= review.rating %>stars</p>
-                    </div>
+                    
 
-                    <form method="POST" action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE" class="mb-3">
-                        <button class="btn btn-sm btn-dark">Delete</button>
-                    </form>
+                        <form method="POST" action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE" class="mb-3">
+                            <button class="btn btn-sm btn-dark">Delete</button>
+                        </form>
+                    </div>
                 </div>
             <% } %>
         </div>
