--- a/views/layouts/boilerplate.ejs
+++ b/views/layouts/boilerplate.ejs
@@ -14,6 +14,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
 
     <link rel="stylesheet" href="https://fonts.google.com/share?selection.family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800">
+
+    <link rel="stylesheet" href="/css/rating.css">
+
 </head>
 <body>
     
