--- a/views/listings/show.ejs
+++ b/views/listings/show.ejs
@@ -5,7 +5,10 @@
         <h3><%= listing.title %></h3>
     </div>
     <div class="card col-6 offset-3 show-card listing-card">
-        <img src="<%= listing.image %>" class="card-img-top show-img" alt="listing_image">
+        <!-- Scrollable container for the image -->
+        <div class="show-img-container">
+            <img src="<%= listing.image.url %>" class="show-img" alt="listing_image">
+        </div>
         <div class="card-body">
             <p class="card-text">Owned by <i><%= listing.owner.username %></i></p>
             <p class="card-text"><b><%= listing.description %></b><br></p>
@@ -18,7 +21,6 @@
     <% if (currUser && currUser._id.equals(listing.owner._id)) { %>
         <div class="btns">
             <a href="/listings/<%= listing._id %>/edit" class="btn btn-dark col-1 offset-3 edit-btn">Edit</a>
-
             <form method="POST" action="/listings/<%= listing._id %>?_method=DELETE">
                 <button class="btn btn-dark offset-5">Delete</button>
             </form>
@@ -26,8 +28,9 @@
     <% } %>
 
     <div class="col-8 offset-3 mb-3">
-        <hr>
+        
         <% if (currUser) { %>
+            <hr>
             <h4>Leave a Review</h4>
             <form action="/listings/<%= listing._id %>/reviews" method="POST" novalidate class="needs-validation">
                 <label for="rating" class="form-label">Rating</label>
@@ -59,22 +62,24 @@
             <p class="text-muted text-center">You must be logged in to leave a review.</p>
         <% } %>
 
-        <h4>All Reviews</h4>
-        <div class="row">
-            <% for (let review of listing.reviews) { %>
-                <div class="card col-5 ms-3 mb-3">
-                    <div class="card-body">
-                        <h5 class="card-title">@<%= review.author.username %></h5>
-                        <p class="starability-result card-text" data-rating="<%= review.rating %>"></p>
-                        <p class="card-text"><%= review.comment %></p>
-                        <% if (currUser && currUser._id.equals(review.author._id)) { %>
-                            <form method="POST" action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE" class="mt-2">
-                                <button class="btn btn-sm btn-dark">Delete</button>
-                            </form>
-                        <% } %>
+        <% if (listing.reviews.length > 0){ %>
+            <div class="row">
+                <h4><b>All Reviews</b></h4>
+                <% for (let review of listing.reviews) { %>
+                    <div class="card col-5 ms-3 mb-3">
+                        <div class="card-body">
+                            <h5 class="card-title">@<%= review.author.username %></h5>
+                            <p class="starability-result card-text" data-rating="<%= review.rating %>"></p>
+                            <p class="card-text"><%= review.comment %></p>
+                            <% if (currUser && currUser._id.equals(review.author._id)) { %>
+                                <form method="POST" action="/listings/<%= listing._id %>/reviews/<%= review._id %>?_method=DELETE" class="mt-2">
+                                    <button class="btn btn-sm btn-dark">Delete</button>
+                                </form>
+                            <% } %>
+                        </div>
                     </div>
-                </div>
-            <% } %>
-        </div>
+                <% } %>
+            </div>
+        <%}%>
     </div>
 </div>
